# content-engine-x

./: .env.example  .gitignore  MOCK_PROVIDER_PROMPT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.codex-preview/chrome-mobile-audio/: Local State
.codex-preview/edge-mobile-audio-profile/: Functional SAN Data-wal  Local State
.codex-preview/ui-checks/: browser-summary.json  (+6 more)
docs/: CODEX_HANDOFF.md  TREND_SCANNER_SECURITY.md  claude-bootstrap-prompt.md  claude-handoff.md  enoch-sidecar-architecture.md  phase-1-architecture.md
scripts/: bootstrap.ps1
services/orchestrator/: .env.example  pyproject.toml
services/orchestrator/src/content_engine_x_orchestrator/: __init__.py  adam_contracts.py  adam_persistence.py  ai_caller.py  api.py  brand_profile.py  config.py  enoch_contracts.py  enoch_persistence.py  graph.py  models.py  performance_distiller.py  runtime.py  service.py  state.py  supabase_store.py  viral_mechanics.py
services/orchestrator/src/content_engine_x_orchestrator/memory/: __init__.py  admission_control.py  brain_retriever.py  canonical_fact_store.py  contradiction_guard.py  memory_distiller.py  obsidian_bridge.py  vault_pack_loader.py  vault_sync.py
services/orchestrator/src/content_engine_x_orchestrator/nodes/: __init__.py  brief_intake.py  clip_generation.py  concept_generation.py  hero_image_generation.py  prompt_creation.py  publish_payload.py  qc_decision.py  render_assembly.py  scene_planning.py  script_validation.py  trend_research.py
services/orchestrator/tests/: test_phase0_dual_write.py
(+381 files in other folders)
