[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-engine-x-orchestrator"
version = "0.1.0"
description = "LangGraph orchestration layer for CONTENT ENGINE X"
requires-python = ">=3.13"
dependencies = [
  "langgraph>=0.3.18,<0.4.0",
  "pydantic>=2.11.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
