[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-engine-x-orchestrator"
version = "0.1.0"
description = "LangGraph orchestration layer for CONTENT ENGINE X"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1,<0.117.0",
  "langgraph>=0.3.18,<0.4.0",
  "pydantic>=2.11.1,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn>=0.35.0,<0.36.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
